--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,8 @@
   font-family: 'Unbounded';
   src: url('/fonts/Unbounded-VariableFont_wght.ttf');
 }
+
+@font-face {
+  font-family: 'K2D';
+  src: url('/fonts/K2D-Regular.ttf');
+}
